--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -57,15 +57,20 @@ a
     a
       color: #fff
 
+      &:hover
+        color: #00CC66
+
 section
   .containerMain
     width: 80%
     margin: 0 auto
     h1
-      margin: 170px auto 0 auto
+      margin: 130px auto 0 auto
+      text-align: center
       color: #fff
       font-size: 60px
-      max-width: 800px
+      max-width: 700px
+      line-height: 80px
       font-weight: normal
 
       &::after
@@ -143,3 +148,91 @@ section
 ::-webkit-scrollbar-thumb
   background: #044330ad
   border-radius: 10px
+
+#btn-mobile
+  display: none
+
+@media (max-width: 600px)
+  .container
+    .logo
+      img
+        width: 110px
+
+  section
+    .containerMain
+      h1
+        font-size: 30px 
+        line-height: 2
+        margin-bottom: 70px
+
+    .containerMain
+      .button
+        margin: 5px
+        #text
+          font-size: 90px
+          
+
+  #nav ul
+    display: block
+    position: absolute
+    width: 70%
+    top: 59px
+    right: 0px
+    background-color: #044330f5
+    height: 0
+    transition: 0.6s
+    z-index: 1000
+    visibility: hidden
+    overflow-y: hidden
+
+  #nav.active #menu
+    height: 100vh
+    visibility: visible
+    overflow-y: hidden
+
+  #menu li
+    display: flex
+    align-items: center
+    justify-content: center
+    padding: 1rem 0
+    margin: 40px 2.3rem
+    border-bottom: 1px solid #006633
+
+  #btn-mobile
+    display: flex
+    padding: 0.5rem 1rem
+    border: none
+    background: none
+    cursor: pointer
+    color: #fff
+    gap: 0.5rem
+
+  #hamburger
+    border-top: 2px solid
+    width: 20px
+
+    &:after,&:before
+      display: block
+      content: ""
+      width: 20px
+      height: 2px
+      background: currentColor
+      margin-top: 5px
+      transition: 0.3s
+      position: relative
+
+  #nav.active #hamburger
+    border-top-color: transparent
+
+    &::before
+      transform: rotate(135deg)
+
+    &::after
+      transform: rotate(-135deg)
+      top: -7px
+
+  #nav button
+    visibility: visible
+
+  #nav ul li::after
+    display: none
