--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@ body {
   background-repeat: no-repeat;
   background-size: 1900px 900px;
   background-position: top center;
-  height: 100vh;
 }
 body:before {
   content: " ";
@@ -26,6 +25,7 @@ header {
   z-index: 100;
   position: sticky;
   top: 0px;
+  margin-bottom: 130px;
 }
 
 ul {
@@ -38,6 +38,7 @@ a {
 
 .bgHeader {
   background: #044330ad;
+  backdrop-filter: blur(6px);
 }
 
 .container {
@@ -69,11 +70,12 @@ section .containerMain {
   margin: 0 auto;
 }
 section .containerMain h1 {
-  margin: 130px auto 0 auto;
+  margin: 0 auto;
   text-align: center;
   color: #fff;
   font-size: 60px;
   max-width: 700px;
+  height: 200px !important;
   line-height: 80px;
   font-weight: normal;
 }
@@ -163,6 +165,27 @@ section .containerMain .button .btn:hover {
 
 #btn-mobile {
   display: none;
+}
+
+.containerHis {
+  width: 80%;
+  margin: 400px auto 0 auto;
+}
+.containerHis h1 {
+  font-size: 40px;
+  text-align: center;
+}
+.containerHis .content {
+  width: 80%;
+  margin: 0 auto;
+}
+.containerHis .content p {
+  line-height: 2;
+}
+.containerHis .content img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
 }
 
 @media (max-width: 600px) {
