--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -9,7 +9,6 @@ body
   background-repeat: no-repeat
   background-size: 1900px 900px
   background-position: top center
-  height: 100vh
 
   &:before
     content: ' '
@@ -26,6 +25,7 @@ header
   z-index: 100
   position: sticky
   top: 0px
+  margin-bottom: 130px
 
 ul
   list-style: none
@@ -35,6 +35,7 @@ a
 
 .bgHeader
   background: #044330ad
+  backdrop-filter: blur(6px)
 
 .container
   display: flex
@@ -65,11 +66,12 @@ section
     width: 80%
     margin: 0 auto
     h1
-      margin: 130px auto 0 auto
+      margin: 0 auto
       text-align: center
       color: #fff
       font-size: 60px
       max-width: 700px
+      height: 200px !important
       line-height: 80px
       font-weight: normal
 
@@ -152,6 +154,26 @@ section
 #btn-mobile
   display: none
 
+.containerHis
+  width: 80%
+  margin: 400px auto 0 auto
+
+  h1
+    font-size: 40px
+    text-align: center
+
+  .content
+    width: 80%
+    margin: 0 auto
+
+    p
+      line-height: 2
+
+    img
+      width: 100%
+      height: 400px
+      object-fit: cover
+
 @media (max-width: 600px)
   .container
     .logo
@@ -161,7 +183,7 @@ section
   section
     .containerMain
       h1
-        font-size: 30px 
+        font-size: 30px
         line-height: 2
         margin-bottom: 70px
 
@@ -170,7 +192,6 @@ section
         margin: 5px
         #text
           font-size: 90px
-          
 
   #nav ul
     display: block
